Fix item flickering in slay home

--- a/SoloLearn/app/Scripts/styles/components/Shared/Shimmers/DiscussShimmer.scss
+++ b/SoloLearn/app/Scripts/styles/components/Shared/Shimmers/DiscussShimmer.scss
@@ -16,7 +16,7 @@
 	opacity: 0.5;
 }
 
-.shimmer-wrapper {
+.discuss-shimmer-wrapper {
 	width: 100%;
 	.discuss-shimmer-container {
 		position: relative;
