--- a/SoloLearn/app/Scripts/styles/components/Shared/Shimmers/SlayHomeShimmer.scss
+++ b/SoloLearn/app/Scripts/styles/components/Shared/Shimmers/SlayHomeShimmer.scss
@@ -16,7 +16,12 @@
 	opacity: 0.5;
 }
 
-.shimmer-wrapper {
+.slay-home-shimmer-wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	.slay-home-shimmer-container {
 		display: flex;
 		flex-direction: column;
